Correct line-height spacing

--- a/src/components/icon/icon.scss
+++ b/src/components/icon/icon.scss
@@ -33,6 +33,7 @@
   height: var(--icon-size);
   color: var(--icon-color);
   overflow: hidden;
+  line-height: 1;
 
   i {
     font-size: var(--icon-size) !important;
